# LuaShield

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: overview.md  task.md
src/: analyzer.rs  cli.rs  config.rs  error.rs  fs.rs  lib.rs  llm.rs  logging.rs  main.rs  output.rs
tests/: analyzer_test.rs  cli_test.rs  config_test.rs  error_test.rs  fs_test.rs  integration_test.rs  llm_test.rs  logging_test.rs  mod.rs  output_test.rs  test_utils.rs
